[package]
name = "statistical-tests-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Statistical Tests for Rust"
homepage = "https://github.com/JakeRoggenbuck/statistical-tests-rs"
repository = "https://github.com/JakeRoggenbuck/statistical-tests-rs"
readme = "README.md"
keywords = ["math", "statistics"]
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com"]

[dependencies]
